--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "server",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.5",
-    "morgan": "~1.9.1"
-  }
+    "name": "server",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www",
+        "build-client": "cd ../client && npm install && npm run build"
+    },
+    "dependencies": {
+        "cookie-parser": "~1.4.4",
+        "cors": "^2.8.5",
+        "debug": "~2.6.9",
+        "express": "~4.16.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.12.5",
+        "morgan": "~1.9.1"
+    }
 }
