--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "bootstrap-icons": "^1.4.1",
+        "jwt-decode": "^3.1.2",
         "node-sass": "^5.0.0",
         "react": "^17.0.2",
         "react-bootstrap": "^1.5.2",
